--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
 	"devDependencies": {
 		"gulp": "",
 		"gulp-connect": "",
-		"gulp-connect": "",
 		"gulp-connect-php": "",
 		"gulp-sass": "",
 		"gulp-autoprefixer": "",
+		"gulp-sourcemaps": "",
 		"gulp-uglify": "",
 		"gulp-concat": "",
 		"gulp-imagemin": "",
